; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/ipu-v3/extr_ipu-common.c_ipu_submodules_exit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/ipu-v3/extr_ipu-common.c_ipu_submodules_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipu_soc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ipu_soc*)* @ipu_submodules_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipu_submodules_exit(%struct.ipu_soc* %0) #0 {
  %2 = alloca %struct.ipu_soc*, align 8
  store %struct.ipu_soc* %0, %struct.ipu_soc** %2, align 8
  %3 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %4 = call i32 @ipu_smfc_exit(%struct.ipu_soc* %3)
  %5 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %6 = call i32 @ipu_dp_exit(%struct.ipu_soc* %5)
  %7 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %8 = call i32 @ipu_dmfc_exit(%struct.ipu_soc* %7)
  %9 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %10 = call i32 @ipu_dc_exit(%struct.ipu_soc* %9)
  %11 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %12 = call i32 @ipu_di_exit(%struct.ipu_soc* %11, i32 1)
  %13 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %14 = call i32 @ipu_di_exit(%struct.ipu_soc* %13, i32 0)
  %15 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %16 = call i32 @ipu_image_convert_exit(%struct.ipu_soc* %15)
  %17 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %18 = call i32 @ipu_vdi_exit(%struct.ipu_soc* %17)
  %19 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %20 = call i32 @ipu_ic_exit(%struct.ipu_soc* %19)
  %21 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %22 = call i32 @ipu_csi_exit(%struct.ipu_soc* %21, i32 1)
  %23 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %24 = call i32 @ipu_csi_exit(%struct.ipu_soc* %23, i32 0)
  %25 = load %struct.ipu_soc*, %struct.ipu_soc** %2, align 8
  %26 = call i32 @ipu_cpmem_exit(%struct.ipu_soc* %25)
  ret void
}

declare dso_local i32 @ipu_smfc_exit(%struct.ipu_soc*) #1

declare dso_local i32 @ipu_dp_exit(%struct.ipu_soc*) #1

declare dso_local i32 @ipu_dmfc_exit(%struct.ipu_soc*) #1

declare dso_local i32 @ipu_dc_exit(%struct.ipu_soc*) #1

declare dso_local i32 @ipu_di_exit(%struct.ipu_soc*, i32) #1

declare dso_local i32 @ipu_image_convert_exit(%struct.ipu_soc*) #1

declare dso_local i32 @ipu_vdi_exit(%struct.ipu_soc*) #1

declare dso_local i32 @ipu_ic_exit(%struct.ipu_soc*) #1

declare dso_local i32 @ipu_csi_exit(%struct.ipu_soc*, i32) #1

declare dso_local i32 @ipu_cpmem_exit(%struct.ipu_soc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
